# 2024-P1-The-AhmadAA

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
