[tool.poetry]
name = "6400-prac-1"
version = "0.1.0"
description = ""
authors = ["Ahmad AA <111224176+The-AhmadAA@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
